--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "openai": "^4.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
@@ -48,5 +49,4 @@
   "devDependencies": {
     "tailwindcss": "^3.3.3"
   }
-  
 }
